# quickstart-agent

./: pyproject.toml
src/ai_test/: .env  __init__.py  gemini.py  main.py
