[project]
name = "ai-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.16",
]

[project.scripts]
ai-test = "ai_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
